syntax = "proto3";

package yeti.account.v1;

option go_package = "github.com/xmlking/yeti/libs/gen/go/yeti/account/v1;accountv1";
option java_multiple_files = true;
option java_package = "yeti.account.v1";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";
import "yeti/common/v1/common.proto";

// Account Service
service AccountService {
  rpc Get(GetRequest) returns (GetResponse);
  rpc Write(WriteRequest) returns (google.protobuf.Empty);
}

message GetRequest {
  google.protobuf.StringValue key = 1 [
    (validate.rules).string = {
      min_len: 0
    }
  ];
}

message GetResponse {
  yeti.common.v1.Account account = 1;
}

message WriteRequest {
  yeti.common.v1.Account account = 1;
}
