syntax = "proto3";

package yeti.echo.v1;

option go_package = "github.com/xmlking/yeti/libs/gogen/yeti/echo/v1;echov1";
option java_multiple_files = true;
option java_package = "yeti.echo.v1";

service EchoService {
  rpc Echo(EchoRequest) returns (EchoResponse);
}

message EchoRequest {
  string message = 1;
}

message EchoResponse {
  string message = 1;
}
